[fix] Unsubscribe button alignment #573
Fixes #573

--- a/openwisp_controller/connection/static/connection/css/command-inline.css
+++ b/openwisp_controller/connection/static/connection/css/command-inline.css
@@ -217,3 +217,6 @@ li.commands {
     padding: 5px 0px;
   }
 }
+.ow-object-notify {
+  height: 20px;
+}
